--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -14,11 +14,12 @@ interface Props {
   title: string;
   description: string;
   image?: string;
+  redirect?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/nano.png" } = Astro.props;
+const { title, description, image = "/nano.png", redirect } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -56,6 +57,13 @@ const { title, description, image = "/nano.png" } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+{redirect ? (
+  <meta 
+    http-equiv="refresh" 
+    content={ `0; url=${ redirect }` } 
+  />
+) : null}
 
 <ViewTransitions  />
 
