Add umami tracking

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -58,6 +58,9 @@ const { title, description, image = "/nano.png", redirect } = Astro.props;
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
+<!-- Tracking -->
+<script defer src="https://cloud.umami.is/script.js" data-website-id="87c2b135-3ed8-4f05-a219-edcced32fafa"></script>
+
 {redirect ? (
   <meta 
     http-equiv="refresh" 
