--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const work = await Promise.all(
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h4 class="animate font-semibold text-black dark:text-white text-4xl font-serif">
-      Hi, I'm Michael <EmojiScroller client:load transition:persist/>
+      Hi, I'm Michael <EmojiScroller/>
     </h4>
     <div class="space-y-16">
       <section>
