Added source link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import BackToTop from "@components/BackToTop.astro";
     </div>
     <div class="flex justify-between items-center">
       <div>
-        &copy; 2024 {`|`} {SITE.NAME}
+        &copy; 2024 {`|`} {SITE.NAME} - <a class="underline" href="https://git.rausch.nz/michael/michaelrausch-24">View Source</a>
       </div>
       <div class="flex flex-wrap gap-1 items-center">
         <button
