--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,7 @@ body {
   @apply font-sans antialiased;
   @apply flex flex-col;
   @apply bg-stone-100 dark:bg-black;
-  @apply text-black/50 dark:text-white/75;
+  @apply text-black dark:text-white/75;
 }
 
 header {
