--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,9 +31,9 @@ import { SITE } from "@consts";
         <span>
           {`/`}
         </span>
-        <!-- <Link href="/lab">
+        <Link href="/lab">
           lab
-        </Link> -->
+        </Link> 
       </nav>
     </div>
   </Container>
